--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
+    "react-awesome-button": "^6.5.1",
     "typed.js": "^2.0.11"
   },
   "devDependencies": {
